# text-sentiment-analysis

./: pyproject.toml
txsa_ind_assginment/: main.ipynb
