[tool.poetry]
name = "txsa_ind_assginment"
version = "0.1.0"
description = "Tokenisation, stemming, stopword removal, POS tagging, and parse tree generation for TXSA individual assignment."
authors = ["Choong Man Shun <manshun00@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
nltk = "^3.7"
jupyter = "^1.0.0"
textblob = "^0.17.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
